--- a/app.json
+++ b/app.json
@@ -1,21 +1,27 @@
 {
   "expo": {
-    "name": "guess-the-number-app",
-    "slug": "guess-the-number-app",
+    "name": "Guess the Number",
+    "slug": "guess-the-number",
     "version": "1.0.0",
     "orientation": "default",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#152056"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/icon.png",
+        "backgroundColor": "#152056"
+      },
+      "package": "com.dilyanastefanova.guess_the_number",
+      "versionCode": 1
+    },
     "ios": {
       "supportsTablet": true
     },
